Project

General

Profile

Actions

Bug #19592

closed

Unable to statically link a single extension in 3.2.x and >=3.1.4

Bug #19592: Unable to statically link a single extension in 3.2.x and >=3.1.4

Added by npic1 (Nat Pic1) over 3 years ago. Updated over 2 years ago.

Status:
Closed
Assignee:
-
Target version:
-
ruby -v:
[ruby-core:113195]

Description

Hi,
I need to statically link a single extension (not all of them) by adding it to ext/Setup.
This worked until version 3.1.4 and 3.2.x.

It appears that this change broke it:
https://bugs.ruby-lang.org/projects/ruby-master/repository/git/revisions/790cf4b6d0475614afb127b416e87cfa39044d67
https://github.com/ruby/ruby/pull/6756.

I have attached a script to reproduce the issue.

When running the script, ldd fails with:

ext/extinit.o: in function `Init_ext':
extinit.c:(.text+0x10): undefined reference to `ruby_init_ext'

Files

ruby_static_test.sh (1.57 KB) ruby_static_test.sh npic1 (Nat Pic1), 04/12/2023 01:47 PM
Actions

Also available in: PDF Atom