[Bug #19592] Fix ext/Setup support

After [1], using ext/Setup to link some, but not all extensions failed
during linking. I did not know about this option, and had assumed that
only `--with-static-linked-ext` builds can include statically linked
extensions.

Include the support code for statically linked extensions in all
configurations like before [1]. Initialize the table lazily to minimize
footprint on builds that have no statically linked extensions.

[1]: 790cf4b6d0475614afb127b416e87cfa39044d67 "Fix autoload status of
         statically linked extensions"